--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ markdown_extensions:
       permalink: true
   - admonition
   - pymdownx.arithmatex
+      - generic: true
   - pymdownx.highlight
   - pymdownx.snippets
   - pymdownx.details
