--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
   - Home: index.md
   - Patterns:
       - Overview: patterns/index.md
+      - Probability & Statistics: patterns/stats.md
   - Machine Learning:
       - Overview: ml/index.md
   - NLP:
