--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ nav:
       - Bayesian Learning: ml/bayes_learning.md
       - Clustering: ml/clustering.md
       - Decision Trees: ml/decision_trees.md
-      - Features: ml/features.md
+      - Features: ml/feature.md
       - Instance Based Learning: ml/instance_based.md
       - Neural Nets: ml/nn.md
       - Random Optimization: ml/rand_optim.md
